--- a/app/src/main/res/layout/single_row_recycle.xml
+++ b/app/src/main/res/layout/single_row_recycle.xml
@@ -4,6 +4,7 @@
     android:padding="5dp"
     android:id="@+id/parentLayoutXml">
 
+
     <TextView
         android:id="@+id/recTextView"
         android:layout_width="wrap_content"
@@ -13,11 +14,22 @@
     <Button
         android:id="@+id/buttonPlay"
         android:layout_marginTop="20dp"
-        android:layout_marginLeft="40dp"
+        android:layout_marginLeft="30dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/play_button"
         android:layout_below="@+id/recTextView"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toLeftOf="@+id/buttonStop"
+        android:layout_below="@+id/recTextView"
+        android:layout_marginTop="20dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginLeft="15dp"
+        android:text="@string/delete_button"
+        android:id="@+id/buttonDelete"/>
 
     <Button
         android:id="@+id/buttonStop"
